# PyNotam

./: .gitignore  _parser.py  cli.py  notam.py  pyproject.toml
tests/: test_bulk.py  test_geo.py  test_helper.py
tests/test_data/: failed_notam_1756085848_1.txt  failed_notam_1756085851_4.txt  failed_notam_1756085851_5.txt  failed_notam_1756085851_6.txt  failed_notam_1756085851_7.txt  failed_notam_1756085853_8.txt  part_002.txt  part_003.txt  part_004.txt  part_005.txt  part_006.txt  part_007.txt  part_008.txt  part_009.txt  part_010.txt  part_011.txt  part_012.txt  part_013.txt  part_014.txt  part_015.txt  part_016.txt  part_017.txt  part_018.txt  part_019.txt  part_020.txt  part_021.txt  part_022.txt  part_023.txt  part_024.txt  part_025.txt  part_026.txt  part_027.txt  part_028.txt  part_029.txt  part_030.txt  part_031.txt  part_032.txt  part_033.txt  part_034.txt  part_035.txt  (+216 more)
